--- a/Coding/.project
+++ b/Coding/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Coding</name>
+	<name>kaprekar</name>
 	<comment></comment>
 	<projects>
 	</projects>
